# gsoc-2022-warm-up

./: .README.md.swp  CMakeCache.txt  README.md
src/: CMakeLists.txt  vectMatvect.cpp
src/vtune-results/r000go/: r000go.vtune
src/vtune-results/r000go/config/: collection.cfg  context_values.cfg  log.cfg  runss.options
src/vtune-results/r000go/data.0/: 2076817-2076822.0-2076822.0.th  2076817-2076822.0-2076822.0.th.aux  2076817-2076822.0-2076838.0.th  2076817-2076822.0-2076838.0.th.aux  2076817-2076822.0-2076839.0.th  2076817-2076822.0-2076839.0.th.aux  2076817-2076822.0.trace  24db6b461f89d410.clbin  b4414639a74966ba.clbin  gen_metrics0_0_2_0_0.0.vtss  systemcollector-2076817-FlipS.sc  userapicollector-2076822-d6898b75-2076837-d68dcca6.th  userapicollector-2076822-d6898b75.trace
src/vtune-results/r001go/: r001go.vtune
src/vtune-results/r001go/config/: analysis_type.cfg  context_values.cfg  log.cfg  runss.options  state.cfg
src/vtune-results/r001go/data.0/: 1efb11f2164516ad.clbin  2077901-2077906.0-2077906.0.th  2077901-2077906.0-2077906.0.th.aux  2077901-2077906.0-2077923.0.th  2077901-2077906.0-2077923.0.th.aux  2077901-2077906.0-2077924.0.th  2077901-2077906.0-2077924.0.th.aux  2077901-2077906.0.trace  b4414639a74966ba.clpdb  gen_metrics0_0_2_0_0.0.vtss  systemcollector-2077901-FlipS.sc  userapicollector-2077906-034519db-2077922-0349aa11.th  userapicollector-2077906-034519db.trace
src/vtune-results/r002go/: r002go.vtune
src/vtune-results/r002go/config/: collection.cfg  context_values.cfg  log.cfg  runss.options  (+1 more)
src/vtune-results/r003go/: r003go.vtune
(+191 files in other folders)
